[package]
name = "crypto_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
bcrypt = "0.16.0"
js-sys = "0.3.76"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--strip-debug", "--strip-producers", "--strip-dwarf", "--dce", "--merge-similar-functions"]